# pdf_fusion

./: .replit  app.py  pyproject.toml
attached_assets/: Pasted-I-want-to-create-a-professional-multi-functional-web-app-using-Python-Streamlit-on-Replit-The-ap-1748171025059.txt
modules/: __init__.py  converters.py  file_manager.py  ocr_processor.py  pdf_operations.py  utilities.py
