[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2pdf>=0.1.8",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20250506",
    "pillow>=11.2.1",
    "pymupdf>=1.26.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "qrcode>=8.2",
    "reportlab>=4.4.1",
    "streamlit>=1.45.1",
]
